--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -2,9 +2,11 @@
 
     <string name="app_name">Ranger Verde</string>
     <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
+    <string name="menu_share">Compartilhar</string>
     <string name="title_activity_main">Ranger Verde</string>
     <string name="desc">Only Description</string>
     <string name="widget_label">Ranger Verde Widget</string>
+    <string name="share_sound">Compartilhar Audio</string>
+    <string name="share_error">Envio Falhou</string>
 
 </resources>
