--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -15,4 +15,8 @@
 	<string name="alarm">Alarm</string>
 	<string name="set_success">" configuration success"</string>
 	<string name="set_fail">" configuration fail"</string>
+	<string name="rate">"Rate " </string>
+	<string name="remind_later">"Remind me later" </string>
+	<string name="no_thanks">"No, thanks" </string>
+	<string name="format_rate">"If you enjoy using %s, please take a moment to rate it. Thanks for your support!"</string>
 </resources>
