--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,4 +16,8 @@
 	<string name="set_success">" configuration success"</string>
 	<string name="set_fail">" configuration fail"</string>
 	<string name="admob_id">a151b009acd5001</string>
+	<string name="rate">"Rate " </string>
+	<string name="remind_later">"Remind me later" </string>
+	<string name="no_thanks">"No, thanks" </string>
+	<string name="format_rate">"If you enjoy using %s, please take a moment to rate it. Thanks for your support!"</string>
 </resources>
